# DouyinVietnamizer

./: .gitignore  .graphifyignore  CLAUDE.md  README.md  package-lock.json  package.json  piper_releases.json  pnpm-lock.yaml
backend/: pyproject.toml  run_backend.py  yutto-help.txt
backend/douyin_vietnamizer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/dv_backend/: __init__.py  api.py  audio_probe.py  bootstrap.py  checkpoint_compat.py  checkpoints.py  config.py  database.py  diarization_artifacts.py  diarization_models.py  diarization_second_pass.py  dubbing_languages.py  dubbing_quality_score.py  duration_diagnostics.py  duration_fit_policy.py  duration_predictor.py  duration_repair_executor.py  duration_safety.py  error_logging.py  errors.py  experiment_comparability.py  final_dub_alignment.py  gpu_lease.py  gpu_manager.py  hardware.py  jobs.py  local_env.py  main.py  models.py  omnivoice_chunk_synthesis.py  omnivoice_chunking.py  omnivoice_content_fidelity.py  omnivoice_diagnostics.py  omnivoice_env.py  omnivoice_mps.py  omnivoice_steps_eval.py  omnivoice_wav_concat.py  pipeline.py  pipeline_diarize.py  preview_vram_release.py  (+61 more)
backend/scripts/: analyze_job_segments.py  analyze_subtitle_asr.py  audit_all_tts_fidelity.py  audit_translation_semantics.py  benchmark_omnivoice_steps.py  benchmark_tts_profiles.py  benchmark_vad_asr_tts.py  calibrate_voice_duration.py  debug_gemini.py  diagnose_omnivoice_auto_vs_clone.py  diagnose_omnivoice_clone_content_deletion.py  diagnose_omnivoice_failure_bundle.py  diagnose_omnivoice_phase1b_controlled.py  download_pyannote.py  evaluate_dubbing_timing.py  evaluate_production_batch.py  evaluate_voice_profile.py  finish_uniform_speed_remux.py  fit_and_resume_mix.py  import_timing_review.py  measure_tts_spill.py  measure_vad_false_positives.py  p0_recover_and_remux.py  p0_seam_audit_and_repair.py  preflight_release.py  recommend_timing_settings.py  report_soft_placement.py  rerun_from_duration_repair.py  resume_job.py  resume_job_from_mix.py  resume_mix_bypass_timing_gate.py  resynth_job_segments.py  rollback_narrow_p0.py  run_omnivoice_smoke.py  (+12 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
(+268 files in other folders)
