[project]
name = "douyin-vietnamizer-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "deep-translator>=1.11,<2",
  "edge-tts>=7,<8",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

