[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "douyin-vietnamizer-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "qwen-asr>=0.0.6",
  "torch>=2.7",
  "torchaudio>=2.7",
  "soundfile>=0.12",
  "numpy>=2",
  "huggingface-hub>=0.26",
  "transformers>=4.57",
  "onnxruntime>=1.20",
  "demucs>=4.0",
  "hf-xet>=1.5",
  "edge-tts>=7,<8",
  "silero-vad>=5.1,<6",
  "pythainlp>=5.0,<6",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["dv_backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
extra-index-url = ["https://pnnbao97.github.io/llama-cpp-python-v0.3.16/cpu/"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
